--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.llw.mvvm"
-        minSdkVersion 21
-        targetSdkVersion 30
+        minSdkVersion 25
+        targetSdkVersion 33
         versionCode 23
         versionName "2.3"
 
@@ -81,28 +80,28 @@ dependencies {
     //加载lib下的jar文件
     implementation fileTree(include: '*.jar', dir: 'libs')
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+//    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //日志拦截器
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     //rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
     //gson
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.google.code.gson:gson:2.8.9'
     //图片加载框架
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //Room数据库
     implementation 'androidx.room:room-runtime:2.3.0'
@@ -114,16 +113,18 @@ dependencies {
     //RecyclerView的好搭档
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     // navigation依赖 ui 和 fragment
-    implementation 'androidx.navigation:navigation-fragment:2.3.2'
-    implementation 'androidx.navigation:navigation-ui:2.3.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     // 腾讯X5内核WebView
     implementation 'com.tencent.tbs:tbssdk:44085'
     // 饺子VideoView
     implementation 'cn.jzvd:jiaozivideoplayer:7.7.0'
     // Hilt 和 Hilt注解处理器
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
+   /* implementation "com.google.dagger:hilt-android:2.28-alpha"
     annotationProcessor "com.google.dagger:hilt-android-compiler:2.28-alpha"
     // Hilt 对于ViewModel的支持
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
-    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'*/
+    implementation 'com.google.dagger:hilt-android:2.43'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.43'
 }
