--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
             android:theme="@style/MainTheme" /> <!-- 腾讯WebView -->
         <activity
             android:name=".ui.activity.SplashActivity"
+            android:exported="true"
             android:theme="@style/SplashThemePlus">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
